# prism

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run-tests.ps1  setup.cfg  validate-commit.ps1
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
data/documentation/: connection_pool_guide.md  test_failure_guide.md
docs/: ARCHITECTURE.md  CI-CD.md  CONTRIBUTING.md  DEPLOYMENT.md  TESTING.md
examples/: analyze_failure.py  api_server.py  batch_processor.py  ingest_docs.py
src/: __init__.py  config.py
src/agents/: __init__.py
src/rag/: __init__.py
src/utils/: __init__.py  formatter.py  logger.py  parser.py
tests/: test_agents.py
