[tool.poetry]
name = "llm-rag-powered-qa-agent"
version = "1.0.0"
description = "LLM RAG-Powered CI/CD Failure Analysis Agent with Root Cause Analysis and Remediation"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/llm_rag_powered_qa_agent"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.9"
langchain-openai = "^0.1.7"
langchain-community = "^0.0.21"
chromadb = "^0.4.24"
openai = "^1.3.9"
fastapi = "^0.135.1"
uvicorn = {version = "^0.24.0", extras = ["standard"]}
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
requests = "^2.31.0"
loguru = "^0.7.2"
dataclasses-json = "^0.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^4.1.0"
black = "^26.1.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
