[metadata]
name = prism
version = 0.1.0
description = PRISM — Pipeline Root-cause Intelligence for Silicon & Media
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
url = https://github.com/twrappe/prism
project_urls =
    Bug Tracker = https://github.com/twrappe/prism/issues
    Documentation = https://github.com/twrappe/prism
    Source Code = https://github.com/twrappe/prism

[options]
packages = find:
python_requires = >=3.10
install_requires =
    langchain==0.2.5
    langchain-openai==0.1.8
    langchain-community==0.2.5
    langchain-core>=0.2.5,<1.0
    langsmith>=0.1.0
    numpy>=1.26.0
    chromadb>=0.5.3,<1.0
    openai>=1.26.0,<2.0.0
    fastapi==0.104.1
    uvicorn==0.24.0
    pydantic==2.12.5
    pydantic-settings>=2.0.0
    python-dotenv==1.2.2
    pyyaml==6.0.3
    requests==2.31.0
    loguru==0.7.2
    dataclasses-json==0.6.1
    poetry==2.3.2

[options.extras_require]
dev =
    pytest==7.4.3
    pytest-cov==4.1.0
    black==23.12.0
    flake8==6.1.0
    mypy==1.7.1

[options.packages.find]
where = .
include = src*
